--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <body>
     <link rel="stylesheet" href="style.css">
     <div class="clock">
-        <div id="hour">00:00:00</div>
+        <div id="hour">00</div>
         <span>:</span>
-        <div id="minute"></div>
+        <div id="minute">00</div>
         <span>:</span>
-        <div id="seconds"></div>
+        <div id="seconds">00</div>
     </div>
     <script src="Script.js"></script>
 </body>
